--- a/lauravos_2.ipynb
+++ b/lauravos_2.ipynb
@@ -16,19 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 522,
+   "execution_count": 585,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 523,
+   "execution_count": 586,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#create a pandas DataFrame\n",
     "grades_dict = {'Wally': [87, 96, 70], 'Eva': [100, 87, 90],\n",
     "               'Sam': [94, 77, 90], 'Katie': [100, 81, 82],\n",
     "               'Bob': [83, 65, 85]}\n",
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 524,
+   "execution_count": 587,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 525,
+   "execution_count": 588,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +122,7 @@
        "Test3     70   90   90     82   85"
       ]
      },
-     "execution_count": 525,
+     "execution_count": 588,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 526,
+   "execution_count": 589,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +145,7 @@
        "Name: Eva, dtype: int64"
       ]
      },
-     "execution_count": 526,
+     "execution_count": 589,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 527,
+   "execution_count": 590,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +169,7 @@
        "Name: Sam, dtype: int64"
       ]
      },
-     "execution_count": 527,
+     "execution_count": 590,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 528,
+   "execution_count": 591,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +202,7 @@
        "Name: Test1, dtype: int64"
       ]
      },
-     "execution_count": 528,
+     "execution_count": 591,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 529,
+   "execution_count": 592,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +228,7 @@
        "Name: Test2, dtype: int64"
       ]
      },
-     "execution_count": 529,
+     "execution_count": 592,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 530,
+   "execution_count": 593,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +307,7 @@
        "Test3     70   90   90     82   85"
       ]
      },
-     "execution_count": 530,
+     "execution_count": 593,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 531,
+   "execution_count": 594,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +377,7 @@
        "Test2     96   87   77     81   65"
       ]
      },
-     "execution_count": 531,
+     "execution_count": 594,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 532,
+   "execution_count": 595,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +405,7 @@
        "87"
       ]
      },
-     "execution_count": 532,
+     "execution_count": 595,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 533,
+   "execution_count": 596,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +426,7 @@
        "70"
       ]
      },
-     "execution_count": 533,
+     "execution_count": 596,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 534,
+   "execution_count": 597,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +557,7 @@
        "max    96.00  100.00  94.00  100.00  85.00"
       ]
      },
-     "execution_count": 534,
+     "execution_count": 597,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 535,
+   "execution_count": 598,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 536,
+   "execution_count": 599,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 537,
+   "execution_count": 600,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +608,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 537,
+     "execution_count": 600,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 538,
+   "execution_count": 601,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +693,7 @@
        "Bob       83     65     85"
       ]
      },
-     "execution_count": 538,
+     "execution_count": 601,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 539,
+   "execution_count": 602,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +799,7 @@
        "max    100.00  96.00  90.00"
       ]
      },
-     "execution_count": 539,
+     "execution_count": 602,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 540,
+   "execution_count": 603,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +823,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 540,
+     "execution_count": 603,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 541,
+   "execution_count": 604,
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +908,7 @@
        "Test1     87  100   94    100   83"
       ]
      },
-     "execution_count": 541,
+     "execution_count": 604,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 542,
+   "execution_count": 605,
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +987,7 @@
        "Test3   85   90     82   90     70"
       ]
      },
-     "execution_count": 542,
+     "execution_count": 605,
      "metadata": {},
      "output_type": "execute_result"
     }
